Fix blurred text

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -26,3 +26,25 @@ body {
 .navbar-brand {
     font-family: RoAkazie, serif !important;
 }
+
+@media (prefers-color-scheme: light) {
+    .visible {
+        color: black;
+    }
+
+    .blurred {
+        color: transparent;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    .visible {
+        color: white;
+    }
+
+    .blurred {
+        color: transparent;
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    }
+}
